Initial jade-4.5.4-6868